@@ -398,6 +398,8 @@
 	Fixed small leak on :write (on exit too, but leaks before exit don't
 	matter).
 
+	Fixed processing if-statements with multiple else branches.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
